css/styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
}

nav {
  position: fixed;
  width: 100%;
  height: 110px;
  top: 0;
  left: 0;
  z-index: 10;
}

.nav-logo {
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  height: 80px;
  width: 106px;
  background: linear-gradient(to right, rgb(160, 35, 129), #f34423);
  padding: 16px;
}

.nav-top {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  background-color: #000;
  height: 32px;
  color: rgba(255, 255, 255, 0.6);
  font-size: 13px;
  font-family: Helvetica, sans-serif;
}

.nav-top li {
  display: inline;
  margin: 8px;
  line-height: 30px;
}

.nav-top li:hover {
  color: #fff;
  cursor: pointer;
}

.nav-center li {
  display: inline;
  padding: 8px;
  line-height: 46px;
  font-size: 14px;
  font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
}

.nav-center li:hover {
  color: #000;
  cursor: pointer;
}

.menu-icon,
.search-icon {
  color: #000;
  cursor: pointer;
}

.nav-center {
  background-color: #fcfcfc;
  height: 48px;
  color: #aaa;
  clear: left;
}

.search-icon,
.menu-icon {
  padding: 16px;
  border-left: 1px solid #aaa;
  height: 48px;
}

.menu-icon {
  display: none;
  color: red;
}

.nav-bottom {
  background-color: #ffdd39;
  height: 30px;
  font-size: 13px;
  font-family: Helvetica, sans-serif;
}

.nav-bottom span {
  margin-left: 6px;
  line-height: 30px;
}

.float-left {
  float: left;
}

.news {
  color: #fff;
}

.float-right,
.search-icon,
.menu-icon {
  float: right;
}

main {
  position: relative;
  top: 112px;
}

.container-a {
  width: 100%;
  height: 504px;
  padding: 5px;
  margin-left: auto;
  margin-right: auto;
}

.container-a-left {
  width: 67.8%;
  height: inherit;
  margin: 5px;
}

.article-img-one {
  position: absolute;
  width: 98%;
  height: inherit;
}

.article-gradient-one {
  position: absolute;
  background: linear-gradient(180deg, #f16555, #fff, #000 80%);
  width: 98%;
  height: inherit;
  opacity: 0.9;
}

.article-date {
  margin-top: 20px;
  margin-right: 20px;
  color: #fff;
}

.tnw-logo {
  position: absolute;
  width: 400px;
  z-index: 1;
  top: 30px;
  left: 30px;
}

.tnw-logo:hover {
  cursor: pointer;
}

.container-a-left-bottom {
  position: absolute;
  bottom: 20px;
  left: 20px;
  color: #fff;
}

.container-a-left-bottom h2 {
  font-size: 36px;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  font-weight: 900;
  line-height: 0.9em;
}

.container-a-left-bottom h3 {
  font-size: 28px;
}

.container-a-left-bottom:hover {
  cursor: pointer;
}

.author:hover {
  color: #a69e9d;
  cursor: pointer;
}

.article-img-one,
.article-gradient-one {
  height: 527px;
}

.author {
  font-size: 12px;
  font-family: Helvetica, sans-serif;
}

.price-strike {
  font-size: 10px;
  font-family: Helvetica, sans-serif;
  text-decoration: line-through;
  color: #aaa;
}

.article-section {
  max-width: 1192px;
  margin: 0 auto;
  padding: 0 20px;
}

.latest-news-link {
  position: relative;
  top: 80px;
  left: 10px;
  color: #f42;
  font-size: 24px;
  font-family: 'Segoe UI', Verdana, sans-serif;
  font-weight: bolder;
  text-align: left;
}

.latest-news-link:hover {
  color: #000;
  cursor: pointer;
}

.latest-news-link div {
  position: absolute;
  left: 0;
}

.latest-news-link h4 {
  font-size: 16px;
  font-family: Helvetica, sans-serif;
  margin-right: 30px;
  margin-top: 5px;
}

.latest-news-link h4 a {
  color: #f16555;
  font-weight: lighter;
}

.latest-news-section {
  position: relative;
  top: 90px;
  margin-bottom: 56px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  width: 100%;
}

.inner-latest {
  width: 100%;
  height: 220px;
  padding: 10px;
  margin-bottom: 10px;
}

.inner-latest h3 {
  font-size: 16px;
  font-weight: bold;
  font-family: 'Segoe UI', Verdana;
}

.inner-latest span {
  color: #a69e9d;
}

.inner-latest-thumbnail {
  width: 100%;
  height: 145px;
}

.inner-latest {
  cursor: pointer;
}

.inner-deal-thumbnail {
  width: 100%;
  height: 201px;
}

.ln {
  line-height: 1.6em;
}

.gap {
  grid-column-gap: 12px;
  grid-row-gap: 35px;
}

.cont-height {
  height: 300px;
}

.funding-section {
  position: relative;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  width: 100%;
  top: 100px;
  margin-bottom: 150px;
}

.funding-article {
  display: flex;
  flex-direction: column;
  position: relative;
  padding: 10px;
}

.funding-article:hover {
  cursor: pointer;
}

.omt {
  margin-right: 20px;
}

.corp-icon {
  width: 50px;
  position: absolute;
  top: 20px;
  left: 20px;
}

.funding-corp {
  background-color: #f34423;
  font-weight: bold;
  text-align: center;
  width: 100%;
  height: 39px;
  font-size: 16px;
  color: #fff;
  padding-top: 10px;
  font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
}

.corp-amount {
  background-color: #fde7e4;
  text-align: center;
  width: 100%;
  height: 57px;
  padding-top: 14px;
}

.corp-amount h4 {
  font-size: 16px;
  font-weight: bolder;
  font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
}

.corp-amount h5 {
  font-size: 12px;
  font-family: Helvetica, sans-serif;
}

.statistics {
  background-color: #fffaf8;
  font-size: 13px;
  font-family: Helvetica, sans-serif;
  color: #555;
  line-height: 1.7em;
  padding: 16px;
  border-bottom: 1px solid #f16555;
}

.corp-info {
  background-color: #fffaf8;
  font-size: 13px;
  font-family: Helvetica, sans-serif;
  color: #555;
  padding: 10px 16px 16px;
  line-height: 1.7em;
}

.corp-info span {
  font-size: 12px;
  color: #aaa;
}

.most-popular-section {
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-column-gap: 20px;
  grid-row-gap: 45px;
}

.popular-article {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.popular-article h1 {
  color: #f16555;
  font-size: 24px;
  font-family: 'Segoe UI', Verdana, sans-serif;
  font-weight: bolder;
}
/* ... */

